[package]
name = "blockwheel-fs"
version = "0.21.8"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Persistent binary blocks with rotating wheel like access."
edition = "2021"

[dependencies]
o1 = { git = "https://github.com/swizard0/o1.git" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }
arbeitssklave = { git = "https://github.com/swizard0/arbeitssklave.git" }

log = "^0.4"
rand = "^0.8"
bincode = "^1.3"
crc64fast = "^1.0"

serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "^0.9"
