[package]
name = "stress"
version = "0.3.1"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Stress test utility for ero-blockwheel library."
edition = "2021"

[dependencies]
blockwheel-fs = { path = "../.." }

log = "^0.4"
pretty_env_logger = "^0.4"

clap = { version = "^3.0", features = ["cargo", "derive"] }

[profile.release]
debug = true
